# poetry-patches

./: LICENSE  README.md  pyproject.toml
poetry_patches/: __init__.py  command.py  commands.py  patcher.py  plugin.py  plugins.py
poetry_patches/state/: backup.py  meta.py
tests/: __init__.py  conftest.py  test_backup.py  test_meta.py  test_patcher.py  test_poetry_patcher.py
tests/patches/: dummy_1.diff  dummy_2.diff  dummy_3.diff  dummy_4.diff
tests/patches/fail_on_create_if_exists/: 2.diff
tests/patches/fail_on_create_if_exists_file_exists/: 1.diff
tests/patches/fail_on_delete_if_doesnt_exist/: 1.diff
tests/patches/fail_on_rename_if_doesnt_exist/: 1.diff
tests/patches/fail_on_rename_if_exists/: 1.diff  2.diff  3.diff
tests/patches/fail_on_rename_if_exists_file_exists/: 1.diff
tests/patches/fail_on_update_if_doesnt_exist/: 1.diff
tests/patches/pass/: 1.diff  2.diff  3.diff  4.diff
tests/patches/pass_on_line_add/: 1.diff  2.diff
tests/patches/pass_on_line_add_file_exists/: 1.diff
tests/patches/pass_on_line_adds/: 1.diff  2.diff
tests/patches/pass_on_line_break/: 1.diff  2.diff
tests/patches/pass_on_line_remove/: 1.diff  2.diff
tests/patches/pass_on_rename_and_update/: 1.diff  2.diff
tests/patches/pass_on_rename_and_update_file_exists/: 1.diff
